dashboard/testing dep updates